Sat Jan 14 03:38:54 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* file.c (rb_file_s_chmod): avoid warning where sizeof(int) !=
	  sizeof(void*).

Fri Jan 13 19:26:15 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/rdoc/diagram.rb:
	    - properly quote bare element attributes
	    - terminates dangling elements (e.g. <img>, <br>, <link>, etc)
	    - converts "CVS" to the more HTML-friendly acronym element
	    - adds missing type attributes to style elements

	  based on Paul Duncan's patch <pabs@pablotron.org> [ruby-core:7028]

	* lib/rdoc/generators/html_generator.rb: ditto.
	* lib/rdoc/generators/template/html/hefss.rb: ditto.
	* lib/rdoc/generators/template/html/html.rb: ditto.
	* lib/rdoc/generators/template/html/kilmer.rb: ditto.

Thu Jan 12 11:53:08 2006  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/sample/tkballoonhelp.rb: [bug fix] couldn't add to a widget
	  which is constructed with TkComposite module. 
	  [new feature] support 'command' option which is called just before 
	  popping up the balloon help.

Wed Jan 11 00:12:29 2006  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/erb.rb (ERB::Compiler): add instance variable @insert_cmd to 
	  change <%='s behavior.

Tue Jan 10 19:42:33 2006  Tanaka Akira  <akr@m17n.org>

	* gc.c (garbage_collect): mark ruby_current_node.
	  if an exception is raised in a finalizer written in C called by
	  rb_gc_call_finalizer_at_exit, ruby_set_current_source may use
	  collected ruby_current_node and mark_source_filename may corrupt
	  memory.

Tue Jan 10 13:30:34 2006  akira yamada  <akira@ruby-lang.org>

	* ext/syck/rubyext.c (syck_resolver_transfer): should be able to load
	  !ruby/object:Bignum syntax 1.8.3 dumped. [ruby-core:6159]

Tue Jan 10 12:47:41 2006  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* lib/yaml/rubytypes.rb (Fixnum): Bignum could not be loaded in
	  ruby 1.8.3/1.8.4. [ruby-core:6115]

	* lib/yaml/rubytypes.rb (Numeric): Subclass of Numeric could not